Add caffeine cache implementation